Fix Transaction Table Alignment Issue

--- a/src/pages/Maintenance/maintenance.module.scss
+++ b/src/pages/Maintenance/maintenance.module.scss
@@ -52,5 +52,9 @@
     &:not(:last-child) {
       margin-bottom: 40px;
     }
+
+    a {
+      text-decoration: underline;
+    }
   }
 }
